--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/Login page/login_page.html">login</a>
+                        <a href="/Login page/index.html">login</a>
                     </li>
                 </ul>
                 <div class="hamburger">
