--- a/Login page/sign_up.html
+++ b/Login page/sign_up.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="card-footer">
                     <div class="d-flex justify-content-center links">
-                        Already have an account? <a href="login_page.html">Log In</a>
+                        Already have an account? <a href="index.html">Log In</a>
                     </div>
             </div>
         </div>
