--- a/Login page/index.html
+++ b/Login page/index.html
@@ -48,7 +48,7 @@
 					Don't have an account?<a href="sign_up.html">Sign Up</a>
 				</div>
 				<div class="d-flex justify-content-center">
-					<a href="#">Forgot your password?</a>
+					<a href="forgot.html">Forgot your password?</a>
 				</div>
 			</div>
 		</div>
