--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#">My Resume</a>
+                        <a href="NIKHIL KUMAR Resume.pdf">My Resume</a>
                     </li>
                     <li class="nav-item">
                         <a href="#">Contact</a>
